--- a/AssignmentThree/app/src/main/AndroidManifest.xml
+++ b/AssignmentThree/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         <activity
             android:name=".DetailActivity" />
 
+        <activity
+            android:name=".CartActivity" />
+
     </application>
 
 </manifest>
